# ProjetNINA

./: .testcfg  Makefile  Makefile.am  README.md  config.conf  configure.ac  exec.c  get_geckodriver.sh  get_html.py  init_github.sh  log.hpp  main.c  main.cpp  main.h  main.hpp  mod_install.txt  navigator.c  navigator.h  nina_0.1-1_amd64.deb  python_dependencies.sh  shred.sh  stress_test.sh  test
DEBIAN/: control  copyright  postinst
TimedKeystrokes/: getTimedKeystrokes.c  getTimedKeystrokes.h  main.c
Uinput/: a.out  loadUinput.sh  main.py  uinput  uinput.c  writeKb.c  writeKb.h  write_keyboard.c
config/: Doxyfile  conf  config.conf  nina.conf  ninartk.conf
config/dictionaries/: auto_blacklist.txt  blacklist.txt  keywords.txt  rubbish_links.txt  whitelist.txt
debian/: changelog  control  copyright  nina.conffiles  postinst  rules
dictionaries/: blacklist.txt
doc/: Doxyfile  manpage  nina.1
get_html/: scrapy.cfg
get_html/get_html/: items.py  pipelines.py  settings.py
get_html/get_html/spiders/: test.py
html_work/: Makefile  a.out  intelligence.cpp  intelligence.hpp  main.py  mod_install.txt  navigator.c  navigator.cpp  navigator.h  navigator.hpp
module_kernel/: Makefile  ker_mod.c  ker_mod.h
pythonMod/: cos_module.c  main.c  main.py  setup.py
random_choice/: Makefile  adress_list.txt  choice.c  choice.cpp  hist.txt  new_navigator.c
scripts/: create_devices.sh  get_geckodriver.sh  init_github.sh  loadUinput.sh  python_dependencies.sh  reinstallPythonMod.sh  setup_python.sh  stress_test.sh
selenium/: main.py
src/: lib.hpp  log.hpp  main.cpp  main.hpp
src/ctrl_keyboard/: conf  manage_devices.c  manage_devices.h  setup.py  timed_keystrokes.c  timed_keystrokes.h  uinput_wrapping_module.c  write_keyboard.c  write_keyboard.h  xdo.sh
src/html_work/: intelligence.cpp  intelligence.hpp  main.py  navigator.cpp  navigator.hpp
src/module_kernel/: Makefile  ker_mod.c  ker_mod.h  ninartk.c  ninartk.h
src/navigation/: intelligence.cpp  intelligence.hpp  main.py  mod_install.txt  navigator.cpp  navigator.hpp  nina.py
src/navigation/.deps/: intelligence.Po  navigator.Po
src/timed_keystrokes/: timed_keystrokes.c  timed_keystrokes.h
src/uinput/: setup.py  test.py  uinput_wrapping_module.c  write_keyboard.c  write_keyboard.h
timed_keystrokes/: timed_keystrokes.c  timed_keystrokes.h
uinput/: Makefile  write_keyboard.c  write_keyboard.h
word_list/: word_list.txt
